# qtIFV

./: CMakeLists.txt  README.md
widgets/: CMakeLists.txt
widgets/NotePad/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
